--- a/documentation.html
+++ b/documentation.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>MOVIES.</h1>
-    <p>For this project, I'm going to build the server-side component of a “movies” web application. This web application will provide users with access to information about different movies, directors, and genres. Users will be able to sign up, update their personal information, and create a list of their favorite movies.</p>
+    <p>For this project, I am going to build the server-side component of a “movies” web application. This web application will provide users with access to information about different movies, directors, and genres. Users will be able to sign up, update their personal information, and create a list of their favorite movies.</p>
   </body>
 </html>
