--- a/public/documentation.html
+++ b/public/documentation.html
@@ -1,11 +1,191 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Movie API</title>
-  </head>
-  <body>
-    <h1>MOVIES.</h1>
-    <p>For this project, I am going to build the server-side component of a “movies” web application. This web application will provide users with access to information about different movies, directors, and genres. Users will be able to sign up, update their personal information, and create a list of their favorite movies.</p>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>MyFlix API Documentation</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+
+<body class="container">
+  <h1 class="h1">MyFlix</h1>
+
+  <p>For this project, I am going to build the server-side component of a “movies” web application. This web application will provide users with access to information about different movies, directors, and genres. Users will be able to sign up, update their personal information, and create a list of their favorite movies.</p>
+
+  <table class="table table-hover align middle">
+    <thead>
+      <tr>
+        <th scope="col">Business Logic</th>
+        <th scope="col">URL</th>
+        <th scope="col">HTTP Method</th>
+        <th scope="col">Query Parameters</th>
+        <th scope="col">Request body data format</th>
+        <th scope="col">Response body data format</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Return a list of all movies to the users</td>
+        <td>/movies</td>
+        <td>GET</td>
+        <td>None</td>
+        <td>None</td>
+        <td>A JSON object with data about all movies</td>
+      </tr>
+      <tr>
+        <td>Return data about a single movie by title to the user</td>
+        <td>/movies/:title</td>
+        <td>GET</td>
+        <td>:title</td>
+        <td>None</td>
+        <td>A JSON object with data about the selected movie containing description, genre, director, and image URL. Example:
+          <pre>
+            <code>
+{
+  Title: '',
+  Description: '',
+  Year: '',
+  Genre: '',
+  Director: {
+    name: '',
+    birth: '',
+    death: '',
+  }
+  Actors: ''
+}
+            </code>
+          </pre>
+        </td>
+      </tr>
+      <tr>
+        <td>Return data about a genre (description) by name/title</td>
+        <td>/movies/genre/:name</td>
+        <td>GET</td>
+        <td>:name</td>
+        <td>None</td>
+        <td>A JSON object with data about the selected genre. Example:
+          <pre>
+            <code>
+{
+  genre: 'Action'
+}
+            </code>
+          </pre>
+        </td>
+      </tr>
+      <tr>
+        <td>Return data about a director (bio, date of birth) by name</td>
+        <td>/movies/director/:name</td>
+        <td>GET</td>
+        <td>:name</td>
+        <td>none</td>
+        <td>A JSON object with data about the director. Example:
+          <pre>
+            <code>
+{
+  name: 'Denis Villeneuve',
+  birth: 'October 03, 1967',
+  death: '-'
+}
+            </code>
+          </pre>
+        </td>
+      </tr>
+      <tr>
+        <td>Allow new users to register</td>
+        <td>/users</td>
+        <td>POST</td>
+        <td>None</td>
+        <td>A JSON object with data about the user to add. Example:
+          <pre>
+            <code>
+{
+  username: 'peterson',
+  password: 'mr.peter',
+  email: 'peterson@gmail.com'
+  favorites: [
+    'The Dark Knight',
+    'Thor: Ragnarok',
+    'Interstellar'
+  ]
+};
+            </code>
+          </pre>
+        </td>
+        <td>A JSON object with data about new user including ID. Example:
+          <pre>
+            <code>
+{
+  id: '1',
+  username: 'peterson',
+  password: 'mr.peter',
+  email: 'peterson@gmail.com'
+  favorites: [
+    'The Dark Knight',
+    'Thor: Ragnarok',
+    'Interstellar'
+  ]
+};
+            </code>
+          </pre>
+        </td>
+      </tr>
+      <tr>
+        <td>Allow users to update their user info (username)</td>
+        <td>/users/:username</td>
+        <td>PUT</td>
+        <td>:username</td>
+        <td>A JSON object with new username. Example:
+          <pre>
+            <code>
+{
+  username: 'jacob'
+}
+            </code>
+          </pre>
+        </td>
+        <td>A JSON  object with the updated user profile. Example:
+          <pre>
+            <code>
+{
+  id: '1',
+  username: 'jacob',
+  password: 'mr.peter',
+  email: 'peterson@gmail.com'
+  favorites: [
+    'The Dark Knight',
+    'Thor: Ragnarok',
+    'Interstellar'
+  ]
+}
+            </code>
+          </pre>
+        </td>
+      </tr>
+      <tr>
+        <td>Allow users to add a movie to their list of favorites</td>
+        <td>/users/:username/:movie</td>
+        <td>POST</td>
+        <td>:username, :movie</td>
+        <td>None</td>
+        <td>A message saying that the movie was added</td>
+      </tr>
+      <tr>
+        <td>Allow users to remove a movie from their list of favorites</td>
+        <td>/users/:username/:movie</td>
+        <td>DELETE</td>
+        <td>:username, :movie</td>
+        <td>None</td>
+        <td>A message saying that a movie has been deleted</td>
+      </tr>
+      <tr>
+        <td>Allow existing users to deregister</td>
+        <td>/users/:username</td>
+        <td>DELETE</td>
+        <td>:username</td>
+        <td>None</td>
+        <td>A message saying the user has been deregistered</td>
+      </tr>
+    </tbody>
+  </table>
+</body>
 </html>
